# magma

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  todo.txt
benches/: magma_benchmark.rs
cipher_magma/: CHANGELOG.md  Cargo.toml  README.md
cipher_magma/src/: cipher_mode.rs  core.rs  lib.rs  magma.rs  utils.rs
cipher_magma/src/cipher_mode/: cbc.rs  cfb.rs  ctr.rs  ctr_acpkm.rs  ecb.rs  mac.rs  mod.rs  ofb.rs
cipher_magma/src/ciphers/: cbc.rs  cfb.rs  ctr.rs  ctr_acpkm.rs  ecb.rs  mac.rs  mod.rs  ofb.rs
cipher_magma/src/core/: cipher_key.rs  magma.rs  utils.rs
cipher_magma/src/magma/: cipher_key.rs  cipher_mode.rs  cipher_operation.rs  constants.rs  core.rs  magma_stream.rs  stream.rs
cipher_magma/src/magma/cipher_mode/: cbc.rs  cfb.rs  ctr.rs  ctr_acpkm.rs  ecb.rs  mac.rs  ofb.rs
cipher_magma/src/magma_core/: magma.rs  mod.rs
cipher_magma/src/magma_mode/: cipher_mode.rs  cipher_operation.rs  magma_mode.rs  mod.rs
cipher_magma/src/magma_mode/cipher_mode/: cbc.rs  cfb.rs  ctr.rs  ctr_acpkm.rs  ecb.rs  mac.rs  ofb.rs
cipher_magma/src/stream/: cipher_mode.rs  cipher_operation.rs  magma_stream.rs  mod.rs
cipher_magma/src/stream/cipher_mode/: cbc.rs  cfb.rs  ctr.rs  ctr_acpkm.rs  ecb.rs  mac.rs  ofb.rs
cipher_magma_samples/: Cargo.toml  README.md
crypto_vectors/: Cargo.toml
crypto_vectors/src/: lib.rs
crypto_vectors/src/gost/: mod.rs  r3413_2015.rs  rfc5830.rs  rfc8891.rs
crypto_vectors/src/gost/r1323565_1_017_2018/: ctr_acpkm.rs  mod.rs
magma_samples/: Cargo.toml  README.md
magma_samples/benches/: magma_benchmark.rs
magma_samples/src/: calculate_mac.rs  encrypt_block.rs  encrypt_bmp.rs  encrypt_buffer.rs  encrypt_buffer_parallel.rs  encrypt_file.rs  encrypt_large_buffer.rs  encrypt_parallel.rs  encrypt_text.rs  main.rs  samples.rs
magma_samples/src/samples/: calculate_mac.rs  encrypt_block.rs  encrypt_file.rs  encrypt_large_buffer.rs  encrypt_text.rs
src/: gost_28147_89.rs  lib.rs  magma.rs  openssl_sample.rs  rsa.rs
