[package]
name = "cipher_magma"
version = "0.2.4"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Block Cipher Magma (GOST R 34.12-2015, former GOST 28147-89)"
readme = "README.md"
repository = "https://github.com/sheroz/cipher_magma"
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "magma_benchmark"
harness = false

